# replicore

./: .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlint.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  DockerHub.md  Dockerfile  README.md  RELEASE.md  RELEASING.md  ROADMAP.md  Readme.md  build.rs  docker-compose-extra.yml  docker-compose.yml  file.discovery.example.yaml  replicante.example.yaml  replicante.minimal.yaml  replicore.example.yaml  replicore.yaml  replidev.yaml
agent/base/: Cargo.toml  build.rs
agent/base/src/: api.rs  config.rs  error.rs  lib.rs  models.rs
agent/base/src/api/: handler_index.rs  handler_info.rs  handler_status.rs  mod.rs
agent/client/: Cargo.toml
agent/client/src/: error.rs  errors.rs  http.rs  lib.rs  metrics.rs  mock.rs
agent/discovery/: Cargo.toml  file.example.yaml
agent/discovery/src/: config.rs  error.rs  lib.rs  metrics.rs
agent/discovery/src/backends/: file.rs  mod.rs
agent/discovery/src/engines/: file.rs  mod.rs
agent/discovery/tests/: two.clusters.yaml
agent/fetcher/: Cargo.toml
agent/mongodb/: .gitignore  Cargo.toml
agent/mongodb/src/: error.rs  lib.rs  rs_status.rs  settings.rs
client/agent/: CHANGELOG.md  Cargo.toml
client/agent/http/: CHANGELOG.md  Cargo.toml
client/agent/http/src/: lib.rs
client/agent/src/: error.rs  fixture.rs  lib.rs
client/core/: CHANGELOG.md  Cargo.toml
client/core/src/: config.rs  error.rs  lib.rs
client/core/src/client/: apply.rs  cluster_spec.rs  list.rs  mod.rs  naction.rs  namespace.rs  oaction.rs  platform.rs
client/platform/: CHANGELOG.md  Cargo.toml
client/platform/http/: CHANGELOG.md  Cargo.toml
client/platform/http/src/: config.rs  error.rs  lib.rs
client/platform/src/: fixture.rs  lib.rs
cluster/aggregator/: Cargo.toml
cluster/aggregator/src/: cluster_meta.rs  error.rs  lib.rs  shard_lag.rs
cluster/discovery/: Cargo.toml  file.example.yaml
cluster/discovery/src/: config.rs  error.rs  lib.rs
cluster/discovery/src/backends/: file.rs  http.rs  mod.rs
cluster/discovery/tests/: two.clusters.yaml
cluster/fetcher/: Cargo.toml
cluster/fetcher/src/: actions.rs  agent.rs  error.rs  lib.rs  metrics.rs  node.rs  shard.rs  snapshotter.rs
cluster/fetcher/src/actions/: mod.rs  node.rs
coordinator/: Cargo.toml
coordinator/src/: admin.rs  config.rs  coordinator.rs  error.rs  lib.rs  lock.rs  metrics.rs  mock.rs  node_id.rs  tombstone.rs
coordinator/src/admin/: election.rs  lock.rs  mod.rs
coordinator/src/backend/: mod.rs
coordinator/src/backend/zookeeper/: admin.rs  backend.rs  client.rs  constants.rs  metrics.rs  mod.rs
coordinator/src/config/: mod.rs  zookeeper.rs
coordinator/src/coordinator/: election.rs  lock.rs  looping_election.rs  mod.rs
coordinator/src/mock/: admin.rs  backend.rs  mod.rs
core/auth/: CHANGELOG.md  Cargo.toml
core/auth/insecure/: Cargo.toml
core/auth/insecure/src/: lib.rs
core/auth/src/: lib.rs
core/auth/src/access/: audit.rs  mod.rs  test.rs
core/auth/src/identity/: mod.rs
core/conf/: CHANGELOG.md  Cargo.toml
core/conf/src/: lib.rs  loading.rs  object.rs  runtime.rs
core/context/: CHANGELOG.md  Cargo.toml
core/context/src/: lib.rs  middleware.rs
core/injector/: CHANGELOG.md  Cargo.toml
core/injector/src/: clients.rs  lib.rs
core/oaction/: CHANGELOG.md  Cargo.toml
core/oaction/src/: errors.rs  handler.rs  lib.rs  registry.rs
core/sdk/: CHANGELOG.md  Cargo.toml
core/sdk/src/: constants.rs  errors.rs  lib.rs  naction.rs  oaction.rs
core/store/: CHANGELOG.md  Cargo.toml
core/store/sqlite/: CHANGELOG.md  Cargo.toml
core/store/sqlite/src/: conf.rs  factory.rs  lib.rs  schema.rs  telemetry.rs
core/store/src/: delete.rs  fixture.rs  ids.rs  lib.rs  persist.rs  query.rs  tests.rs
core/tasks/: CHANGELOG.md  Cargo.toml
core/tasks/discovery/: Cargo.toml
core/tasks/discovery/src/: error.rs  lib.rs
core/tasks/orchestrator/: Cargo.toml
core/tasks/orchestrator/src/: error.rs  lib.rs  logic.rs  metrics.rs
core/tasks/sqlite/: Cargo.toml
core/tasks/sqlite/src/: conf.rs  factory.rs  schema.rs  telemetry.rs
core/tasks/src/: conf.rs  error.rs  factory.rs  lib.rs  submit.rs  telemetry.rs
core/tasks/src/execute/: backoff.rs  executor.rs  fixture.rs  mod.rs  tests.rs
data/aggregator/: Cargo.toml
data/aggregator/src/: cluster_meta.rs  error.rs  lib.rs  metrics.rs
data/fetcher/: Cargo.toml
data/fetcher/src/: agent.rs  error.rs  errors.rs  lib.rs  meta.rs  metrics.rs  node.rs  shard.rs  snapshotter.rs
data/models/: Cargo.toml
data/models/src/: admin.rs  agent.rs  api.rs  cluster.rs  datastore.rs  events.rs  lib.rs  node.rs
data/models/src/events/: mod.rs
data/models/src/webui/: cluster.rs  mod.rs
data/store/: Cargo.toml
data/store/src/: config.rs  error.rs  errors.rs  lib.rs  mock.rs  store.rs  validator.rs
data/store/src/admin/: data.rs  mod.rs
data/store/src/backend/: mod.rs  mongo.rs
data/store/src/mock/: mod.rs  store.rs
devtools/replidev/: CHANGELOG.md  Cargo.toml  Makefile  README.md
devtools/replidev/src/: conf.rs  error.rs  lib.rs  main.rs
models/core/: Cargo.toml
models/core/src/: actions.rs  admin.rs  agent.rs  api.rs  cluster.rs  datastore.rs  lib.rs  scope.rs
replicante/: Cargo.toml
replicante/src/: config.rs  error.rs  errors.rs  lib.rs  logging.rs  main.rs  metrics.rs  tasks.rs
replicante/src/components/: mod.rs  update_checker.rs  workers.rs
replicante/src/config/: components.rs  events.rs  mod.rs  sentry.rs  task_workers.rs  timeouts.rs
replicante/src/interfaces/: healthchecks.rs  metrics.rs  mod.rs  tracing.rs
replicante/src/tasks/: mod.rs  payload.rs
replictl/: Cargo.toml
replictl/src/: error.rs  errors.rs  interfaces.rs  lib.rs  logging.rs  main.rs  outcome.rs
replictl/src/commands/: mod.rs  versions.rs
replictl/src/core/: mod.rs
src/: lib.rs  (+4 more)
tasks/: Cargo.toml
tasks/src/: config.rs  error.rs  lib.rs  metrics.rs  task_id.rs
tasks/src/admin/: mod.rs
tasks/src/config/: kafka.rs  mod.rs
tasks/src/request/: mod.rs
tasks/src/worker/: mod.rs  set.rs
(+1177 files in other folders)
