[workspace]
members = [
  # Binary creates providing final packages.
  "bin/replicore",

  # Interface crates defining services.
  "core/auth",
  "core/events",

  # Interface implementation crates.
  "core/auth/insecure",
  "core/events/sqlite",

  # Control Plane implementation crates.
  "core/conf",
  "core/context",
  "core/injector",

  # Legacy sync subcrates
  #"agent/*",
  #"bin/*",
  #"cluster/*",
  #"core/cluster/*",
  #"core/components/*",
  #"core/conf",
  #"core/interface/*",
  #"core/orchestrator_action/*",
  #"core/tasks/*",
  #"core/util/*",
  #"externals/*",
  #"models/*",
  #"service/*",
  #"store/*",
  #"stream/*",
]
resolver = "2"

[patch.crates-io]
# Patch the SDK against a local path for cooperative development.
#replisdk = { path = "../replisdk-rust" }
# Patch the SDK against a git commit for incremental merges between releases.
replisdk = { git = "https://github.com/replicante-io/replisdk-rust.git", rev = "a3cb6d8" }
