[workspace]
members = [
  # Binary creates providing final packages.
  "bin/replicore",
  "bin/replictl",

  # Interface crates defining services.
  "core/auth",
  "core/events",
  "core/oaction",
  "core/store",
  "core/tasks",

  # Interface implementation crates.
  "core/auth/insecure",
  "core/events/sqlite",
  "core/store/sqlite",
  "core/tasks/sqlite",

  # Control Plane implementation crates.
  "core/cluster/models",
  "core/cluster/view",
  "core/conf",
  "core/context",
  "core/errors",
  "core/injector",
  "core/sdk",
  "core-logic/oaction/test",
  #"core-logic/oaction/platform",
  "core-logic/task/discovery",
  "core-logic/task/orchestrate",

  # Client implementations crates.
  "client/core",
  "client/platform",
  "client/platform/http",
  "core/clients/platform",
]
resolver = "2"

[patch.crates-io]
# Patch the SDK against a local path for cooperative development.
replisdk = { path = "../replisdk-rust" }
# Patch the SDK against a git commit for incremental merges between releases.
#replisdk = { git = "https://github.com/replicante-io/replisdk-rust.git", rev = "a3cb6d8" }
