[package]
name = "replicante_coordinator"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante distributed coordinator interface"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
failure = "^0.1.3"
failure_derive = "^0.1.3"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.1.1"

replicante_util_rndid = { path = "../common/util/rndid" }
