[package]
name = "replicante_coordinator"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante distributed coordinator interface"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
crossbeam-channel = "^0.3.3"
failure = "^0.1.3"
failure_derive = "^0.1.3"
lazy_static = "^1.0.0"
prometheus = "^0.5.0"
rand = "^0.6.1"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.13"
sha2 = "^0.8.0"
slog = "^2.1.1"
zookeeper = "^0.5.5"

replicante_util_failure = { path = "../common/util/failure" }
replicante_util_rndid = { path = "../common/util/rndid" }
