[package]
name = "replicante"
version = "0.2.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../build.rs"

description = "Safe DataStore automation"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "../README.md"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[[bin]]
name = "replicante"
path = "src/main.rs"


[lib]
name = "replicante"
path = "src/lib.rs"


[dependencies]
bodyparser = "^0.8.0"
chrono = "^0.4.6"
clap = "^2.31.2"
failure = "^0.1.5"
humthreads = "^0.1.1"
iron = "^0.6.0"
iron-json-response = "^0.6.0"
lazy_static = "^1.0.0"
opentracingrust = "^0.3.1"
prometheus = { version = "^0.5.0", features = ["process"] }
router = "^0.6.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.13"
serde_yaml = "^0.8.0"
slog = "^2.1.1"
slog-scope = "^4.0.1"
slog-stdlog = "^3.0.2"

replicante_agent_client = { path = "../agent/client" }
replicante_agent_discovery = { path = "../agent/discovery" }
replicante_agent_models = { path = "../common/agent/models" }
replicante_coordinator = { path = "../coordinator" }
replicante_data_aggregator = { path = "../data/aggregator" }
replicante_data_fetcher = { path = "../data/fetcher" }
replicante_data_models = { path = "../data/models" }
replicante_data_store = { path = "../data/store" }
replicante_logging = { path = "../common/logging" }
replicante_streams_events = { path = "../streams/events" }
replicante_tasks = { path = "../tasks" }
replicante_util_failure = { path = "../common/util/failure" }
replicante_util_iron = { path = "../common/util/iron" }
replicante_util_tracing = { path = "../common/util/tracing" }
replicante_util_upkeep = { path = "../common/util/upkeep" }


[build-dependencies]
git2 = "^0.8.0"


[dev-dependencies]
iron-test = "^0.6.0"
replicante_data_store = { path = "../data/store", features = ["with_test_support"] }


[features]
journald = ["replicante_logging/journald"]
