[package]
name = "replictl"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
build = "../build.rs"

description = "Replicante command line tool"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "../README.md"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[[bin]]
name = "replictl"
path = "src/main.rs"


[lib]
name = "replictl"
path = "src/lib.rs"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
clap = "^2.31.2"
error-chain = "^0.12.0"
indicatif = "^0.9.0"
lazy_static = "^1.0.0"
prometheus = "^0.4.1"
reqwest = "^0.8.5"
serde_yaml = "^0.7.3"
slog = "^2.1.1"
slog-term = "^2.4.0"

replicante = { path = "../replicante" }
replicante_agent_discovery = { path = "../agent/discovery" }
replicante_data_models = { path = "../data/models" }
replicante_data_store = { path = "../data/store" }


[build-dependencies]
git2 = "^0.7.0"
