[package]
name = "replicante_tasks"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante async tasks and workers framework"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
failure = "^0.1.3"
failure_derive = "^0.1.3"
futures = "^0.1.25"
lazy_static = "^1.0.0"
num_cpus = "^1.8.0"
prometheus = "^0.5.0"
rdkafka = "^0.18.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.0"
slog = "^2.2.0"

replicante_util_rndid = { path = "../common/util/rndid" }
