[package]
name = "replicante_tasks"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante async tasks and workers framework"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
failure = "^0.1.3"
futures = "^0.1.25"
humthreads = "^0.1.1"
lazy_static = "^1.0.0"
num_cpus = "^1.8.0"
opentracingrust = "^0.3.3"
prometheus = "^0.5.0"
rdkafka = "^0.20.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.0"
slog = "^2.2.0"

replicante_util_failure = { path = "../common/util/failure" }
replicante_util_rndid = { path = "../common/util/rndid" }
replicante_util_upkeep = { path = "../common/util/upkeep" }
