[package]
name = "replicante_agent_client"
version = "0.2.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "HTTP client for Replicante Agents"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[features]
with_test_support = []


[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.5"
futures = "^0.3.4"
lazy_static = "^1.0.0"
opentracingrust = "^0.4.0"
prometheus = "^0.8.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.0"
slog = "^2.2.0"
uuid = { version = "^0.8.0", features = ["serde", "v4"] }

replicante_models_agent = { path = "../../common/models/agent" }
replicante_models_core = { path = "../../models/core" }
replicante_util_failure = { path = "../../common/util/failure" }
replicante_util_tracing = { path = "../../common/util/tracing" }

[dependencies.reqwest]
# Use rustls-tls to access PEM files as Identity objects.
features = ["rustls-tls", "blocking"]
version = "^0.10.4"
