[package]
name = "replicante_agent_discovery"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante Core component for agent discovery"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.5"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_yaml = "^0.8.0"

replicante_data_models = { path = "../../data/models" }
