[package]
name = "replicante_agent_fetcher"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Agent state fetcher"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "Readme.md"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
error-chain = "^0.11.0"

replicante_agent_client = { path = "../client" }
replicante_agent_discovery = { path = "../discovery" }
