[package]
name = "unamed_agent_mongodb"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
build = "../base/build.rs"

[[bin]]
name = "unamed-agent-mongodb-rs"
path = "src/bin/mongodb/rs/agent.rs"

[dependencies]
unamed_agent = { path = "../base" }

bson = "^0.10.0"
config = "^0.7.0"
mongodb = "^0.3.7"
serde = "^1.0.25"
serde_derive = "^1.0.25"

[build-dependencies]
git2 = "^0.6.10"
