[package]
name = "replicore_client"
version = "0.1.0"

edition = "2021"
rust-version = "1.70"

description = "Client Library to interact with Replicante Control Plane Servers"
homepage = "https://www.replicante.io/"
license = "MIT"

[dependencies]
anyhow = "^1.0"
reqwest = { version = "^0.11", features = ["deflate", "gzip", "json"] }
serde = "^1.0"
serde_json = "^1.0"
thiserror = "^1.0"

replisdk = { version = "^0.1", features = ["utils-error_json"] }
