[package]
name = "replicore-client"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

description = "Client Library to interact with Replicante Control Plane Servers"
homepage = "https://www.replicante.io/"
license = "MIT"

[dependencies]
anyhow = "^1.0"
reqwest = { version = "^0.12", features = ["deflate", "gzip", "json", "zstd"] }
serde = "^1.0"
serde_json = "^1.0"
thiserror = "^1.0"
uuid = { version = "^1.4", features = ["serde", "v4"] }

replisdk = { version = "^0.1", features = ["utils-error_json"] }
