[package]
name = "replicante_cluster_aggregator"
version = "0.1.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Cluster status aggregator for Replicante Core"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
failure = "^0.1.5"
lazy_static = "^1.0.0"
opentracingrust = "^0.4.0"
prometheus = "^0.9.0"
slog = "^2.1.1"

replicante_models_core = { path = "../../models/core" }
replicante_service_coordinator = { path = "../../service/coordinator" }
replicante_store_primary = { path = "../../store/primary" }
replicante_util_tracing = { path = "../../common/util/tracing" }
