[package]
name = "replicante_cluster_discovery"
version = "0.1.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante Core component for agent discovery"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.5"
lazy_static = "^1.0.0"
prometheus = "^0.7.0"
reqwest = { version = "^0.9.18", features = ["rustls-tls"] }
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.13"
serde_yaml = "^0.8.0"
slog = "^2.2.0"

replicante_models_core = { path = "../../models/core" }
