[package]
name = "replicante_cluster_fetcher"
version = "0.1.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Cluster status fetcher for Replicante Core"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.5"
lazy_static = "^1.0.0"
opentracingrust = "^0.3.3"
prometheus = "^0.5.0"
slog = "^2.1.1"

replicante_agent_client = { path = "../../agent/client" }
replicante_models_core = { path = "../../models/core" }
replicante_service_coordinator = { path = "../../service/coordinator" }
replicante_store_primary = { path = "../../store/primary" }
replicante_streams_events = { path = "../../streams/events" }
replicante_util_failure = { path = "../../common/util/failure" }
replicante_util_tracing = { path = "../../common/util/tracing" }
