[package]
name = "replicore-injector"
version = "0.1.0"

edition = "2021"
rust-version = "1.70"

description = "RepliCore dependency injection container"
homepage = "https://www.replicante.io/"
license = "MIT"

[features]
# Enable utilities for unit testing.
test-fixture = [
  "replicore-context/test-fixture",
]

[dependencies]
once_cell = "^1.0"
slog = "^2.7"

replicore-conf = { path = "../conf" }
replicore-context = { path = "../context" }

[dev-dependencies]
replicore-context = { path = "../context", features = ["test-fixture"] }
