[package]
name = "replicore-injector"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

description = "RepliCore dependency injection container"
homepage = "https://www.replicante.io/"
license = "MIT"

[features]
# Enable utilities for unit testing.
test-fixture = [
  "replicore-auth-insecure",
  "replicore-context/test-fixture",
  "replicore-events/test-fixture",
  "replicore-store/test-fixture",
  "replicore-tasks/test-fixture",
]

[dependencies]
once_cell = "^1.0"
slog = "^2.7"

replicore-auth = { path = "../auth" }
replicore-clients-platform = { path = "../clients/platform" }
replicore-conf = { path = "../conf" }
replicore-context = { path = "../context" }
replicore-events = { path = "../events" }
replicore-store = { path = "../store" }
replicore-tasks = { path = "../tasks" }

replicore-auth-insecure = { path = "../auth/insecure", optional = true }

[dev-dependencies]
replicore-auth-insecure = { path = "../auth/insecure" }
replicore-context = { path = "../context", features = ["test-fixture"] }
replicore-events = { path = "../events", features = ["test-fixture"] }
replicore-tasks = { path = "../tasks", features = ["test-fixture"] }
