[package]
name = "replicore-store"
version = "0.1.0"

edition = "2021"
rust-version = "1.70"

description = "RepliCore persistent store interface"
homepage = "https://www.replicante.io/"
license = "MIT"

[features]
# Enable utilities for unit testing.
#test-fixture = [""]

[dependencies]
#anyhow = "^1.0"
async-trait = "^0.1"
#prometheus = "^0.13"
#serde = { version = "^1.0", features = ["derive"] }
#serde_json = "^1.0"
#time = { version = "^0.3", features = ["formatting", "parsing", "serde"] }
#thiserror = "^1.0"
#tokio = { version = "^1.0", optional = true, features = ["sync"] }

#replicore-context = { path = "../context" }

#[dev-dependencies]
#tokio = { version = "^1.0", features = ["sync"] }
