[package]
name = "replicore-tasks"
version = "0.1.0"

edition = "2021"
rust-version = "1.75"

description = "RepliCore asyncronous tasks scheduling and execution interfaces"
homepage = "https://www.replicante.io/"
license = "MIT"

[features]
# Enable utilities for unit testing.
test-fixture = []

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
futures = "^0.3"
once_cell = "^1.0"
opentelemetry_api = "^0.20"
prometheus = "^0.13"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
slog = "^2.0"
thiserror = "^1.0"
tokio = { version = "^1.0" , features = ["sync", "macros"] }

replicore-context = { path = "../context" }

replisdk = { version = "^0.1", features = [
  "replicore-models",
  "utils-error_slog",
  "utils-metrics",
  "utils-trace",
] }

[dev-dependencies]
replicore-context = { path = "../context", features = ["test-fixture"] }
