[package]
name = "replicante_data_aggregator"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Cluster status aggregator for Replicante Core"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
failure = "^0.1.5"
lazy_static = "^1.0.0"
prometheus = "^0.5.0"
slog = "^2.1.1"

replicante_coordinator = { path = "../../coordinator" }
replicante_data_models = { path = "../models" }
replicante_data_store = { path = "../store" }
