[package]
name = "replicante_data_fetcher"
version = "0.1.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Cluster status fetcher for Replicante Core"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.5"
lazy_static = "^1.0.0"
prometheus = "^0.5.0"
slog = "^2.1.1"

replicante_agent_client = { path = "../../agent/client" }
replicante_coordinator = { path = "../../coordinator" }
replicante_data_models = { path = "../models" }
replicante_data_store = { path = "../store" }
replicante_streams_events = { path = "../../streams/events" }
replicante_util_failure = { path = "../../common/util/failure" }
