[package]
name = "replicante_data_models"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante core models"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "Readme.md"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
serde = "^1.0.34"
serde_derive = "^1.0.34"

replicante_agent_models = { path = "../../common/agent/models" }


[dev-dependencies]
serde_json = "^1.0.8"
